# charlie-reporting

./: .copilot-context.md  .env.linux  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  MULTI_REPO_STRUCTURE.md  PHASE-2-6-README.md  README.md  STYLE_AUTOMATION_PROMPT.txt  activate_wsl2.sh  common_service_architecture.md  db_service.sqlite3  debug_mock.py  fix_flake8.py  fix_indentation.py  implementation_roadmap.md  main.py  mkdocs.yml  pre-commit-venv-check.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-unified.txt  requirements.txt  rest_email_fetcher.py  run.py  scheduler.py  scheduler_sharepoint_api.py  setup_dev.py  sitecustomize.py  test_api.py  test_api_complete.py  test_orm_attributes.py  test_pathlib_changes.py  test_pydantic_models.py  transformer.py  windows_email_service.py
config/: columns_config.yaml  config.toml  dev_servers.toml  settings.toml  sharepoint_sim.toml
demo/: config.toml
demos/: demo_complete_integration.py  demo_directory_scanning_feature.py  demo_enhanced_excel_operations.py
docs/: OPERATIONS.md  README.md  RemovedPersonalData.xlsx  api_framework.md  api_overview.md  cleanup-status-report.md  development-diary.md  development-workflow.md  development_principles.md  e2e-quickstart.md  final-status-report.md  foundation-overview.md  index.md  integration_pipeline_todo_and_scheduler_spec.md  migration-plan.md  phase-completion-summary.md  phase2-integration-complete.md  phase2-summary.md  phase4-api-implementation-complete.md  product-delivery-plan.md  report-generator_cleanup.md  scheduler_filewatcher_integration_update.md  sharepoint_sim_openapi.json  sharepoint_sim_spec_addendum.md  sharepoint_sim_usage.md  sprint_review.md  test-migration-complete.md  testing-approach.md
foundation/: README.md  pyproject.toml
foundation/src/: __init__.py
foundation/src/config/: settings.py
foundation/src/core/: hashing.py  run_tracking.py
foundation/src/pipeline/: aggregator.py  collector.py  excel.py  loader.py
foundation/src/services/: api.py  sharepoint_stub.py
foundation/tests/: conftest.py  test_aggregator_characterization.py  test_collector_characterization.py  test_excel_characterization.py  test_loader_characterization.py  test_services_smoke.py  test_settings.py  test_smoke.py
logs/: logger.py  phase2_validation.json
scripts/: README.md  analyze_src_deletion.py  check_integration_dependencies.py  cleanup_root_directory.py  complete_final_migration.py  e2e_smoke.sh  enforce_absolute_imports.py  ensure_project_venv.py  ensure_venv.py  final_deletion_check.py  final_deliverable_validation.py  fix_markdown_lint.py  migrate_legacy_code.py  migrate_tests_to_services.py  performance_benchmark.py  phase2_validation.py  preflight_health.py  quality_gate.sh  run_all_service_tests.py  run_consumer_once.py  run_dev_servers.py  run_e2e_once.py  run_integration_tests.py  test_runner.py  validate_phase2.py
services/database-service/: README.md  __init__.py  fix_flake8.py  fix_imports.py  pyproject.toml  pytest.ini  requirements.txt  start_api.py
services/database-service/config/: local.toml
services/database-service/scripts/: run-dev.py
services/database-service/src/: __init__.py  main.py
services/database-service/src/business/models/: __init__.py  attachment.py  email_record.py  report.py  user.py
services/database-service/src/business/services/: __init__.py  data_manager.py  email_service.py  migration_service.py  query_service.py  report_service.py  user_service.py  workflow_service.py
services/database-service/src/charlie_database_service/: __init__.py  main.py
services/database-service/src/charlie_database_service/config/: settings.py
services/database-service/src/config/: __init__.py  database.py  settings.py
services/database-service/src/domain/models/: attachment.py  attachment_pydantic.py  email_record.py  email_record_pydantic.py  report.py  report_pydantic.py  user.py  user_pydantic.py
services/database-service/src/domain/repositories/: __init__.py  base_repository.py  email_repository.py  email_repository_interface.py  repository_interfaces.py
services/database-service/src/infrastructure/: inmemory_repository.py  repositories.py  sqlalchemy_repositories.py
services/database-service/src/infrastructure/persistence/: __init__.py  database.py  mappers.py  migrations.py
services/database-service/src/infrastructure/persistence/models/: base.py  email_model.py  email_models.py
services/database-service/src/interfaces/: __init__.py
services/database-service/src/interfaces/cli/: __init__.py
services/database-service/src/interfaces/rest/: __init__.py  main.py
services/database-service/src/interfaces/rest/routers/: __init__.py  emails.py  health.py  reports.py  users.py
services/database-service/tests/: conftest.py  test_database.py
services/database-service/tests/api/: test_emails_endpoint.py  test_health_endpoint.py
services/database-service/tests/integration/: __init__.py
services/database-service/tests/unit/business/: test_email_service.py
services/database-service/tests/unit/config/: test_database_config.py
services/database-service/tests/unit/domain/: test_attachment.py  test_base_repository.py  test_email_record.py  test_email_repository.py  test_report.py  test_user.py
services/database-service/tests/unit/infrastructure/: test_database_connection.py  test_migrations.py
services/outlook-relay/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/outlook-relay/config/: local.toml  settings.py
services/outlook-relay/scripts/: run-dev.py
services/outlook-relay/src/: main.py
services/outlook-relay/src/business/models/: attachment.py  email.py  outlook.py
services/outlook-relay/src/business/services/: attachment_processor.py  email_fetcher.py  outlook_connector.py
services/outlook-relay/src/infrastructure/: __init__.py
services/outlook-relay/src/interfaces/rest/: __init__.py
services/outlook-relay/src/outlook_relay/: __init__.py  main.py
services/outlook-relay/tests/: test_legacy_email_accounts.py
shared/: README.md  (+18 more)
(+468 files in other folders)
