[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charlie-reporting"
version = "0.1.0"
description = "Daily Report Automation ETL tool for CSV/Excel data transformation and reporting."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pywin32>=306; sys_platform == 'win32'",
    "tomli; python_version < '3.11'",
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=3 --disable-warnings"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]
