[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charlie-database-service"
version = "0.1.0"
description = "Charlie Reporting - Database Service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [ { name = "Charlie Reporting" } ]
dependencies = [
        "sqlalchemy[asyncio]>=2.0.0",
        "asyncpg>=0.29.0",
        "alembic>=1.12.0",
        "aiosqlite>=0.19.0",
        "pydantic>=2.11.0",
        "pydantic-settings>=2.3.0",
        "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "coverage"]

[project.scripts]
database-service = "charlie_database_service.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
