[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-relay"
version = "0.1.0"
description = "Outlook Relay microservice"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
outlook-relay = "outlook_relay.main:main"
